don't make description fixed on mobile devices

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -227,8 +227,6 @@
   .description div {
     display: flex;
     justify-content: center;
-    position: fixed;
-    width: 100%;
   }
 
   .description p {
