--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -10,7 +10,7 @@
   min-height: 100vh;
   gap: 20px;
   top: 20px;
-  right: 20px;
+  right: 5dvw;
 }
 
 
